--- a/www/less/header.less
+++ b/www/less/header.less
@@ -185,6 +185,10 @@
 						height: auto;
 					}
 
+					li {
+					  width: 110%;
+					}
+
 					.title {
 						font-weight: @font-weight-light;
 						font-size: @font-size-small;
